Adding Behat step definitions

--- a/tests/behat/behat.yml
+++ b/tests/behat/behat.yml
@@ -2,10 +2,16 @@ default:
 
     suites:
 
-        integrationtesting:
+        realfileconfig:
+            paths:
+                features: %paths.base%/feature_files/
+            filters: { tags: ~wip }
+            contexts:
+                - \Sainsburys\Hara\ConfigLibrary\Test\IntegrationTesting\RealFileConfigContext
+
+        fakeconfig:
             paths:
                 features: %paths.base%/feature_files/
             filters: { tags: ~wip }
             contexts:
                 - \Sainsburys\Hara\ConfigLibrary\Test\IntegrationTesting\FakeConfigContext
-                - \Sainsburys\Hara\ConfigLibrary\Test\IntegrationTesting\RealFileConfigContext
